--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
+        <h1>Cordel Moderno</h1>
         <p>
-            Cordel Moderno por:
-            <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank"><br> Milton Duarte</a>
+            Por:
+            <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">Milton Duarte</a>
         </p>
 
     </header>
@@ -27,7 +28,7 @@
         </p>
     </section>  
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -65,7 +66,7 @@
         </p>
     </section> 
     
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
