--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -13,6 +13,7 @@
         table {
             border-collapse: collapse;
             width: 400px;
+            height: 400px;
         }
 
         tr.linha {
@@ -22,6 +23,7 @@
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
         }
     </style>
 </head>
