--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,6 +11,14 @@
         table {
             width: 500px;
             border-collapse: collapse;
+
+        }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgrey;
         }
         td, th {
             border: 1px solid black;
@@ -21,6 +29,10 @@
             background-color: gray;
             color: white
         }
+
+        tbody > tr:nth-child(odd){
+            background-color: lightgrey;
+        }
         td.num {
             text-align: right;
         }
@@ -29,9 +41,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>Populaçao das Unidades Federativas        
+        </caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">População</th>
         </thead>
         <tbody>
             <tr>
@@ -97,7 +111,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td></td>
             </tr>
         </tfoot>
