--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,6 +11,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
 
         }
 
@@ -28,6 +29,12 @@
         thead, tfoot {
             background-color: gray;
             color: white
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: gray;
         }
 
         tbody > tr:nth-child(odd){
