--- a/desafios/d014/d014.html
+++ b/desafios/d014/d014.html
@@ -22,6 +22,11 @@
             border: 1px solid black;
             padding: 10px
         }
+
+        .media {
+            background-color: gray;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -66,8 +71,8 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" scope="col">Media de Exatas</th>
-                <td>0.0</td>
+                <th colspan="4" scope="col" class="media">Media de Exatas</th>
+                <td class="media">0.0</td>
             </tr>
             <tr>
                 <th rowspan="3" scope="colgroup">Humanas</th>
@@ -85,8 +90,8 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" scope="col">Média de Humanas</th>
-                <td>0.0</td>
+                <th colspan="4" scope="col" class="media">Média de Humanas</th>
+                <td class="media">0.0</td>
             </tr>
         </tbody>
     </table>
